# shoka

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  apm.lock.yaml  apm.yml  build.rs  renri.toml
.github/workflows/: apm-bump.yml  auto-tag.yml  ci.yml  homebrew.yml  kata-apply.yml  release.yml
.kata/: applied.toml  vars.toml
examples/: smoke.rs
src/: actions.rs  cache.rs  cli.rs  config.rs  gh.rs  git_status.rs  lib.rs  main.rs  paths.rs  remote.rs  state.rs  updater.rs  vcs.rs
src/commands/: cache.rs  cd.rs  clone.rs  completion.rs  doctor.rs  exec.rs  export.rs  import.rs  init_shell.rs  list.rs  mod.rs  new.rs  note.rs  prune.rs  rm.rs  set.rs  tag.rs  tui.rs
tests/: cli.rs
vhs/: .dockerignore  Dockerfile  demo.tape  regen.sh
