[package]
name = "shoka"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A repository workspace manager — jj-aware, TUI-first successor to ghq / rhq."
authors = ["yukimemi <yukimemi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yukimemi/shoka"
homepage = "https://github.com/yukimemi/shoka"
documentation = "https://docs.rs/shoka"
keywords = ["ghq", "rhq", "jj", "git", "tui"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
name = "shoka"
path = "src/lib.rs"

[[bin]]
name = "shoka"
path = "src/main.rs"

[dependencies]
# config / templating
teravars = { version = "0.1.6", features = ["merge", "std-helpers"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

# CLI / fuzzy fallback
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
inquire = "0.9.4"

# async / parallel exec
tokio = { version = "1.52.3", features = ["full"] }

# misc
directories = "6.0.0"
which = "8.0.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
owo-colors = "4.3.0"

# TUI (phase 2 で本格採用、skeleton 段階では未使用)
# ratatui = "0.30"
# crossterm = "0.29"
# nucleo = "0.5"

# gh integration (phase 1 後半 / phase 2 で octocrab 追加)
# octocrab = "0.45"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
