[package]
name = "shoka"
version = "0.20.1"
edition = "2024"
rust-version = "1.85"
description = "A repository workspace manager — jj-aware, TUI-first successor to ghq / rhq."
authors = ["yukimemi <yukimemi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yukimemi/shoka"
homepage = "https://github.com/yukimemi/shoka"
documentation = "https://docs.rs/shoka"
keywords = ["ghq", "rhq", "jj", "git", "tui"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs",
    "assets/**",
]

[lib]
name = "shoka"
path = "src/lib.rs"

[[bin]]
name = "shoka"
path = "src/main.rs"

[dependencies]
# config / templating
teravars = { version = "0.1.6", features = ["merge", "std-helpers"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

# CLI / fuzzy fallback
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
inquire = "0.9.4"

# async / parallel exec
tokio = { version = "1.52.3", features = ["full"] }

# misc
directories = "6.0.0"
which = "8.0.3"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
owo-colors = "4.3.0"
regex = "1.12.4"

# In-process git ops. Same feature set as rvpm to avoid the slow
# `git` CLI subprocess on Windows (process spawn is the dominant
# cost there). `default-features = false` keeps the dep lean —
# only the features shoka actually uses get pulled in.
gix = { version = "0.84.0", default-features = false, features = [
    "sha1",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "status",
    "dirwalk",
    "revision",
] }

# Recursive directory walking for `shoka import` (find `.git`
# subdirs in a ghq-style tree).
walkdir = "2.5.0"

# TUI (Phase 2 dashboard). nucleo carries the fuzzy-match algorithm
# only — inquire still handles the CLI single-shot pickers (`cd` no-arg
# etc.); nucleo lives entirely inside the ratatui app.
ratatui = "0.30.1"
crossterm = "0.29"
nucleo = "0.5"
octocrab = "0.53.1"
kaishin = "0.6.2"
open = "5.3.5"

# Clipboard for `y` (yank slug). `arboard` is the cross-platform
# pick the ecosystem has converged on — works on Windows / macOS /
# X11 / Wayland without per-platform `cfg` in shoka. Failures are
# surfaced as a status-line message rather than panicking the TUI.
# `default-features = false` drops the `image` feature, which would
# otherwise pull in `image` + `png` + `tiff` + `zune-jpeg` etc. —
# pure dead weight for a text-only clipboard write.
arboard = { version = "3.6.1", default-features = false }

# Both reqwest (via hyper-rustls "aws-lc-rs") and octocrab (via
# rustls-ring) pull rustls into the tree with conflicting
# CryptoProvider features, so rustls 0.23 refuses to auto-pick one
# and `CryptoProvider::install_default()` must be called explicitly
# at startup. Direct dep on rustls makes the call site in `main.rs`
# compile without relying on an internal re-export.
rustls = { version = "0.23.40", default-features = false, features = [
    "aws-lc-rs",
    # `std` is required by `CryptoProvider::install_default` and most
    # other std-using APIs. Relying on a transitive enable would be a
    # cargo anti-pattern — if a future dep drops the feature, this
    # call site fails to compile silently.
    "std",
] }

# gh integration (phase 1 後半 / phase 2 で octocrab 追加)
# octocrab = "0.45"

[target.'cfg(unix)'.dependencies]
# setsid() for detached background refresh spawn. Tiny crate,
# unix-only dep so Windows builds don't pull it.
libc = "0.2.186"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
serde_json = "1.0.150"
tempfile = "3.27.0"

# Embed an icon and metadata (FileDescription / ProductName / …)
# into the Windows .exe via a PE resource. Pure-Rust dep that
# shells out to rc.exe (MSVC) or windres (cross-compile) — and
# the actual call is gated on the *target* OS in build.rs, so the
# crate's presence on non-Windows hosts is harmless.
[build-dependencies]
winresource = "0.1.31"

[profile.release]
lto = true
codegen-units = 1
strip = true
